2007-09-13  Akim Demaille  <demaille@gostai.com>

	Insert code after the includes
	* dev/ast-nodes-gen: Insert the prologue after the
	first includes so that the added bits can use entities
	declared in the headers.

2007-09-13  Akim Demaille  <demaille@gostai.com>

	Use foreach
	* src/userver.cc (work_handle_connections_)
	(work_handle_stopall_): here.

2007-09-13  Thomas Moulard  <thomas@moulard.net>

	Prevent runner from emitting a result after an error.
	* src/runner/runner.cc: Here.
	* tests-local.mk: Enable test.

2007-09-13  Thomas Moulard  <thomas@moulard.net>

	Fix typo.
	* tests-local.mk: Here.

2007-09-13  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* dev/ast-nodes-gen: Empty line bw accept implementations.

2007-09-13  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Finally merge Thomas' work on exception handling.
	* src/runner/coroutine.hh (CORO_CALL_CATCH): New.
	(CORO_CALL_): Rename as CORO_CALL_INTERNAL_.
	(CORO_CALL_): New.
	(CORO_CALL): Use CORO_CALL_.
	* src/runner/runner.cc (operator()(SemicolonExp)): Use
	CORO_CALL_CATCH to handle exceptions.

2007-09-13  Akim Demaille  <demaille@gostai.com>

	* src/object/atom.hh, src/object/atom.hxx (code_traits::type):
	Now ast::Function.
	* src/runner/runner.cc (operator()(Function)): Adjust.
	(operator()(CallExp)): Adjust.
	Handle Urbi function calls with arguments.

2007-09-13  Akim Demaille  <demaille@gostai.com>

	Make handling of "context" more local
	* src/runner/runner.cc: here.
	Group the handling of the message name.

2007-09-13  mefyl  <mefyl@lrde.epita.fr>

	Handle the 'context' special message.
	* src/runner/runner.cc: Catch and handle the message.
	* src/runner/runner.hxx: Remove obsolete 'context' slot.
	* src/object/atom.hxx: Print out context, for test purpose.

2007-09-13  Thomas Moulard  <thomas@moulard.net>

	Add string primitives.
	* src/object/string-class.cc: Here.

2007-09-13  Akim Demaille  <demaille@gostai.com>

	Disable "autostringification"